# companies-research-agent

./: .gitignore  README.md  analyzing_agent.py  describing_agent.py  logger.py  main.py  pyproject.toml  q_n_a_agent.py  reading_agent.py  retrieve_from_airtable.py  retrieve_from_html.py  utils.py
